--- a/kursangebot.html
+++ b/kursangebot.html
@@ -284,7 +284,7 @@
             
                         </div>
                         <div class="col-md-6 text-center">
-                            <img src="/assets/images/kurse/Gi_training_gruenstadt.jpeg" alt="BJJ im Gi in Ludwigshafen" width="900"
+                            <img src="/assets/images/kurse/Gi_BJJ_1.jpeg" alt="BJJ im Gi in Ludwigshafen" width="900"
                                 height="600" loading="lazy" decoding="async" class="img-fluid rounded-4 shadow-sm">
                         </div>
                     </div>
@@ -304,7 +304,7 @@
             
                         </div>
                         <div class="col-md-6 order-md-1 text-center">
-                            <img src="/assets/images/kurse/Nogi_Gruenstadt.jpeg" alt="No-Gi Grappling in Ludwigshafen" width="900"
+                            <img src="/assets/images/kurse/nogi_grappling_3.jpeg" alt="No-Gi Grappling in Ludwigshafen" width="900"
                                 height="600" loading="lazy" decoding="async" class="img-fluid rounded-4 shadow-sm">
                         </div>
                     </div>
@@ -591,6 +591,35 @@
             </section>
         </div>
     </main>
+
+      <!-- FOOTER -->
+  <footer class="py-4 border-top footer-dark">
+    <div class="container">
+      <div class="row text-center text-md-start gy-2">
+        <!-- Firma -->
+        <div class="col-md-4">
+          <h6 class="fw-bold mb-2">Circle of Life Jiu-Jitsu</h6>
+          <p class="mb-0">Inhaber Marvin Beck</p>
+          <p class="mb-0">Dürkheimer Str. 56,<br> 67071 Ludwigshafen am Rhein</p>
+        </div>
+
+
+
+
+        <!-- Rechtliches -->
+        <div class="col-md-4">
+          <h6 class="fw-bold mb-2">Rechtliches</h6>
+          <p class="mb-1">
+            <a href="impressum.html" class="footer-link">Impressum</a>
+          </p>
+          <p class="mb-1">
+            <a href="datenschutz.html" class="footer-link">Datenschutz</a>
+          </p>
+          <p class="small mb-0">© 2025 <span id="jahr"></span> – Alle Rechte vorbehalten.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
     <!-- Scroll-to-Top Button -->
     <button id="scrollTopBtn" aria-label="Nach oben scrollen">
