--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
 
   <!-- PREISE -->
   <section id="preise" class="py-5 section-divider">
-    <div class="container">
+    <div class="container price-cards-container">
       <header class="section-head" data-aos="fade-up">
         <h2 class="section-title">Unsere Preisliste</h2>
         <p class="section-subtitle" data-aos="fade-up" data-aos-delay="150">
