--- a/bjj.html
+++ b/bjj.html
@@ -151,7 +151,9 @@
       <section id="was-ist-bjj" class="mb-5 section-divider" data-aos="fade-up">
         <div class="row g-4 align-items-center">
           <div class="col-lg-6">
-            <h2 class="h4 mb-2">Was ist BJJ?</h2>
+            <header class="section-head mb-3">
+                <h2 class="section-title h4">Was ist BJJ?</h2>
+              </header>
             <p>
               Brazilian Jiu-Jitsu arbeitet mit <strong>Positionskontrolle</strong> und <strong>Technik</strong> statt roher Kraft.
               Typischer Ablauf: Stand → Wurf/Takedown → <em>Guard</em> → <em>Passieren</em> → 
@@ -181,7 +183,10 @@
       <section id="geschichte" class="mb-5" data-aos="fade-up">
         <div class="row g-4">
           <div class="col-lg-10 col-xl-8">
-            <h2 class="h4 mb-2">Geschichte & wofür wird BJJ verwendet?</h2>
+            <header class="section-head mb-3">
+                <h2 class="section-title h4">Geschichte & wofür wird BJJ verwendet?</h2>
+              </header>
+
             <p>
               BJJ entwickelte sich im 20. Jahrhundert in Brasilien aus dem Judo, mit starkem Fokus auf das
               <strong>Bodenkampf-Positionsspiel</strong>. Durch Kontrolle, Hebel und Würgen kann eine technisch
@@ -201,26 +206,37 @@
 
       <!-- Begriffe mit „Card-Kopf klickbar = Bild klappt in der Card auf“ -->
       <section id="begriffe" class="mb-4" data-aos="fade-up">
-        <h2 class="h4 mb-3">Wichtige Begriffe im BJJ</h2>
+        <header class="section-head mb-3">
+            <h2 class="section-title h4">Wichtige Begriffe im BJJ</h2>
+          </header>
+
         <div class="row row-cols-1 row-cols-md-2 g-3">
 
           <!-- Guard -->
-          <div class="col">
-            <article class="term-card" aria-labelledby="term-guard">
-              <button class="term-head" type="button" data-bs-toggle="collapse" data-bs-target="#img-guard" aria-expanded="false" aria-controls="img-guard">
-                <h3 id="term-guard" class="h5 mb-0">Guard</h3>
+          <article class="term-card" aria-labelledby="term-guard">
+            <button class="term-head" type="button"
+                    data-bs-toggle="collapse" data-bs-target="#img-guard"
+                    aria-expanded="false" aria-controls="img-guard">
+              <h3 id="term-guard" class="term-title h5 mb-0">Guard</h3>
+              <span class="term-affordance">
+                <span class="term-pill" aria-hidden="true">Bild</span>
                 <span class="chev" aria-hidden="true"></span>
-              </button>
-              <p class="term-desc small">Untere Person kontrolliert die obere mit Beinen/Griffen. Ziel: sweepen oder submitten.</p>
-              <div id="img-guard" class="collapse term-media" data-bs-parent="#begriffe">
-                <picture>
-                  <source srcset="/assets/images/begriffe/guard.avif" type="image/avif">
-                  <source srcset="/assets/images/begriffe/guard.webp" type="image/webp">
-                  <img src="/assets/images/begriffe/guard.jpg" class="img-fluid" width="900" height="600" loading="lazy" decoding="async" alt="BJJ Guard Beispiel">
-                </picture>
-              </div>
-            </article>
-          </div>
+                <span class="visually-hidden">Beispielbild ein-/ausklappen</span>
+              </span>
+            </button>
+          
+            <p class="term-desc small">Untere Person kontrolliert die obere mit Beinen/Griffen. Ziel: sweepen oder submitten.</p>
+          
+            <div id="img-guard" class="collapse term-media" data-bs-parent="#begriffe">
+              <picture>
+                <source srcset="/assets/images/begriffe/guard.avif" type="image/avif">
+                <source srcset="/assets/images/begriffe/guard.webp" type="image/webp">
+                <img src="/assets/images/begriffe/guard.jpg" class="img-fluid"
+                     width="900" height="600" loading="lazy" decoding="async"
+                     alt="BJJ Guard – Beispielbild">
+              </picture>
+            </div>
+          </article>
 
           <!-- Guard-Pass -->
           <div class="col">
@@ -333,9 +349,11 @@
         </div>
 
         <!-- interne Verlinkungen -->
-        <p class="mt-3 small">
-          Ohne Gi trainieren? Sieh dir <a href="/grappling.html">No-Gi Grappling</a> an. Für Kinder: <a href="/kinder.html">Kinder-BJJ</a>. Zeiten: <a href="/index.html#zeiten">Stundenplan</a>.
-        </p>
+        <p class="mt-3 small inline-links">
+            Ohne Gi trainieren? Sieh dir <a class="link-strong" href="/grappling.html"><strong>No-Gi Grappling</strong></a> an.
+            Für Kinder: <a class="link-strong" href="/kinder.html"><strong>Kinder-BJJ</strong></a>.
+            Zeiten: <a class="link-strong" href="/index.html#kursplan"><strong>Stundenplan</strong></a>.
+          </p>
       </section>
 
       <!-- Abschluss-CTA -->
