fitness und condition angepasst

--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -34,6 +34,8 @@
   <!-- AOS -->
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css" />
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
   <!-- Breadcrumb JSON-LD -->
   <script type="application/ld+json">
   {"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[
@@ -210,15 +212,15 @@
       
       
       <!-- TEAM -->
-      <section id="team" class="section-divider" data-aos="fade-up">
+      <!-- <section id="team" class="section-divider" data-aos="fade-up">
         <header class="section-head">
           <h2 class="section-title h4">Team & Coaching</h2>
           <p class="section-subtitle">Erfahrung, Augenmaß und Freude am Vermitteln.</p>
         </header>
 
-        <div class="row g-4">
+        <div class="row g-4"> -->
           <!-- Coach 1 -->
-          <div class="col-md-6 col-xl-4">
+          <!-- <div class="col-md-6 col-xl-4">
             <div class="card rounded-4 h-100">
               <img src="/assets/images/team/coach1.jpg" class="card-img-top rounded-top-4" width="800" height="600" loading="lazy" alt="Coach 1">
               <div class="card-body">
@@ -227,9 +229,9 @@
                 <p class="mb-0 small">Fokus: Fundamentals, Positionsspiel, sichere Progression. Coaching mit System und viel Geduld.</p>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- Coach 2 (optional) -->
-          <div class="col-md-6 col-xl-4">
+          <!-- <div class="col-md-6 col-xl-4">
             <div class="card rounded-4 h-100">
               <img src="/assets/images/team/coach2.jpg" class="card-img-top rounded-top-4" width="800" height="600" loading="lazy" alt="Coach 2">
               <div class="card-body">
@@ -240,12 +242,12 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- DOJO & HYGIENE -->
       <section id="dojo" class="section-divider" data-aos="fade-up">
         <header class="section-head">
-          <h2 class="section-title h4">Dojo & Hygiene</h2>
+          <h2 class="section-title h4">Räumlichkeiten und Hygiene</h2>
           <p class="section-subtitle">Saubere Umgebung, klare Regeln.</p>
         </header>
 
@@ -265,13 +267,12 @@
             <picture>
               <img src="/assets/images/col_halle.jpeg" class="img-fluid rounded-4 shadow-sm" width="900" height="600" loading="lazy" alt="Trainingsraum">
             </picture>
-            <p class="small text-secondary mt-2">Heller Raum, gepflegte Matten, angenehme Atmosphäre.</p>
           </div>
         </div>
       </section>
 
       <!-- TESTIMONIALS (optional) -->
-      <section id="stimmen" class="section-divider" data-aos="fade-up">
+      <!-- <section id="stimmen" class="section-divider" data-aos="fade-up">
         <header class="section-head">
           <h2 class="section-title h4">Stimmen aus der Community</h2>
           <p class="section-subtitle">Was Mitglieder über uns sagen.</p>
@@ -290,7 +291,7 @@
             </blockquote>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- GALERIE -->
       <section id="galerie" class="section-divider" data-aos="fade-up">
@@ -303,18 +304,18 @@
         <div class="row g-3">
           <!-- 6 Beispiel-Bilder -->
           <div class="col-6 col-md-4">
-            <a href="/assets/images/gallery/1_large.jpg" class="gallery-link" data-lightbox="dojo" data-title="Drills">
-              <img src="/assets/images/gallery/1_thumb.jpg" class="img-fluid rounded-3" width="600" height="400" loading="lazy" alt="Drills">
+            <a href="/assets/images/kurse/nogi_grappling_1.jpeg" class="gallery-link" data-lightbox="dojo" data-title="Drills">
+              <img src="/assets/images/kurse/nogi_grappling_1.jpeg" class="img-fluid rounded-3" width="" height="" loading="lazy" alt="Drills">
             </a>
           </div>
           <div class="col-6 col-md-4">
-            <a href="/assets/images/gallery/2_large.jpg" class="gallery-link" data-lightbox="dojo" data-title="Sparring">
-              <img src="/assets/images/gallery/2_thumb.jpg" class="img-fluid rounded-3" width="600" height="400" loading="lazy" alt="Sparring">
+            <a href="/assets/images/kurse/gi_training_1.jpeg" class="gallery-link" data-lightbox="dojo" data-title="Sparring">
+              <img src="/assets/images/kurse/gi_training_1.jpeg" class="img-fluid rounded-3" width="" height="" loading="lazy" alt="Sparring">
             </a>
           </div>
           <div class="col-6 col-md-4">
-            <a href="/assets/images/gallery/3_large.jpg" class="gallery-link" data-lightbox="dojo" data-title="No-Gi">
-              <img src="/assets/images/gallery/3_thumb.jpg" class="img-fluid rounded-3" width="600" height="400" loading="lazy" alt="No-Gi">
+            <a href="/assets/images/Flo_Marvin.jpeg" class="gallery-link" data-lightbox="dojo" data-title="No-Gi">
+              <img src="/assets/images/Flo_Marvin.jpeg" class="img-fluid rounded-3" width="" height="" loading="lazy" alt="No-Gi">
             </a>
           </div>
           <!-- weitere Bilder … -->
@@ -334,34 +335,50 @@
         </div>
       </section>
 
-      <!-- KONTAKT & ANFAHRT -->
-      <section id="kontakt" class="section-divider" data-aos="fade-up">
+
+      <!-- Kontakt-Karte -->
+      <div class="section-devider" id="kontakt">
         <header class="section-head">
           <h2 class="section-title h4">Kontakt & Anfahrt</h2>
           <p class="section-subtitle">Du willst BJJ aus Mannheim, Ludwigshafen oder Frankenthal trainieren? Dann bist du hier richtig.</p>
         </header>
+        <div class="bg-white border rounded-4 p-4 h-100 d-flex flex-column" data-aos="fade-up" data-aos-delay="200">
 
-        <div class="row g-4">
-          <div class="col-lg-6">
-            <address class="mb-3">
-              <strong>Circle of Life Jiu-Jitsu</strong><br>
-              Dürkheimer Str. 56<br>
-              67071 Ludwigshafen am Rhein<br>
-              <span class="text-secondary">E-Mail:</span> <a href="mailto:info@circleoflife-bjj.de">info@circleoflife-bjj.de</a><br>
-              <span class="text-secondary">Tel.:</span> <a href="tel:+49XXXXXXXXX">+49 XXXXXXXXX</a>
-            </address>
-            <ul class="list-unstyled small mb-3">
-              <li>Parken: direkte Umgebung, Seitenstraßen</li>
-              <li>ÖPNV: z. B. Haltestellen in Laufweite</li>
-            </ul>
-            <a href="/index.html#probetraining" class="btn btn-brand">Probetraining vereinbaren</a>
+          <h5 class="mb-3">Circle of Life Jiu-Jitsu</h5>
+
+          <p class="mb-1 d-flex align-items-start">
+            <i class="bi bi-geo-alt-fill text-warning me-2"></i>
+            <span>Am Herrschaftsweiher 17,<br>67071 Ludwigshafen am Rhein</span>
+          </p>
+          <p class="mb-1 d-flex align-items-center">
+            <i class="bi bi-telephone-fill text-warning me-2"></i>
+            <a href="tel:+4917661990534" class="text-decoration-none">0176 61990534</a>
+          </p>
+          <p class="mb-1 d-flex align-items-center">
+            <i class="bi bi-envelope-fill text-warning me-2"></i>
+            <a href="mailto:mail.circleoflife@gmx.de" class="text-decoration-none">mail.circleoflife@gmx.de</a>
+          </p>
+          <p class="mb-3 d-flex align-items-center">
+            <i class="bi bi-instagram text-warning me-2"></i>
+            <a href="https://www.instagram.com/circle_of_life_jiujitsu?igsh=MXVyMDNtdHRmNXoxZw==" target="_blank"
+              class="text-decoration-none">circle_of_life_jiujitsu</a>
+          </p>
+          <p class="mb-3 d-flex align-items-center">
+            <i class="bi bi-whatsapp text-success me-2"></i>
+            <a href="https://wa.me/4917661990534" target="_blank" class="text-decoration-none">WhatsApp schreiben</a>
+          </p>
+
+          <div class="ratio ratio-16x9 rounded-3 overflow-hidden">
+            <iframe title="Karte" loading="lazy" allowfullscreen referrerpolicy="no-referrer-when-downgrade"
+              src="https://www.google.com/maps?q=Am+Herrschaftsweiher+17,+67071+Ludwigshafen+am+Rhein&output=embed">
+            </iframe>
           </div>
-          <div class="col-lg-6">
-            <!-- Optional: statische Map-Grafik oder eingebettete Karte -->
-            <img src="/assets/images/map_static.jpg" class="img-fluid rounded-4 shadow-sm" width="900" height="600" loading="lazy" alt="Anfahrt Circle of Life Jiu-Jitsu">
-          </div>
+
+          <p class="small text-secondary mt-2 mb-0">
+            <i class="bi bi-car-front-fill text-warning me-1"></i>
+            Parken: ihr könnt gegenüber vom Eingang auf der Insel parken.
+          </p>
         </div>
-      </section>
 
       <!-- Abschluss-CTA -->
       <section class="text-center py-4" data-aos="fade-up">
