--- a/bjj.html
+++ b/bjj.html
@@ -28,11 +28,9 @@
 
   <link rel="icon" type="image/svg+xml" href="/assets/images/JiuJitsuLogo.svg" />
 
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;800&family=Lato:wght@300;400;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
-
   <!-- Bootstrap & CSS -->
+  <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+  <link rel="preconnect" href="https://unpkg.com" crossorigin>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/style.css" rel="stylesheet">
   <!-- Gemeinsamer Unterseiten-Stil -->
