--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -21,11 +21,9 @@
 
   <link rel="icon" type="image/svg+xml" href="/assets/images/JiuJitsuLogo.svg" />
 
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700;800&family=Lato:wght@300;400;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
-
   <!-- CSS -->
+  <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
+  <link rel="preconnect" href="https://unpkg.com" crossorigin>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="/css/style.css" rel="stylesheet">
   <link href="/css/page-kursangebot.css" rel="stylesheet"><!-- dein Kursangebot-Theme -->
@@ -33,8 +31,6 @@
 
   <!-- AOS -->
   <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css" />
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
   <!-- Breadcrumb JSON-LD -->
   <script type="application/ld+json">
@@ -347,24 +343,34 @@
           <h5 class="mb-3">Circle of Life Jiu-Jitsu</h5>
 
           <p class="mb-1 d-flex align-items-start">
-            <i class="bi bi-geo-alt-fill text-warning me-2"></i>
+            <span class="icon-chip" aria-hidden="true">
+              <img src="/assets/icons/standort.svg" alt="">
+            </span>
             <span>Am Herrschaftsweiher 17,<br>67071 Ludwigshafen am Rhein</span>
           </p>
           <p class="mb-1 d-flex align-items-center">
-            <i class="bi bi-telephone-fill text-warning me-2"></i>
+            <span class="icon-chip" aria-hidden="true">
+              <img src="/assets/icons/telefon.svg" alt="">
+            </span>
             <a href="tel:+4917661990534" class="text-decoration-none">0176 61990534</a>
           </p>
           <p class="mb-1 d-flex align-items-center">
-            <i class="bi bi-envelope-fill text-warning me-2"></i>
+            <span class="icon-chip" aria-hidden="true">
+              <img src="/assets/icons/mail.svg" alt="">
+            </span>
             <a href="mailto:mail.circleoflife@gmx.de" class="text-decoration-none">mail.circleoflife@gmx.de</a>
           </p>
           <p class="mb-3 d-flex align-items-center">
-            <i class="bi bi-instagram text-warning me-2"></i>
+            <span class="icon-chip" aria-hidden="true">
+              <img src="/assets/icons/instagram_2.svg" alt="">
+            </span>
             <a href="https://www.instagram.com/circle_of_life_jiujitsu?igsh=MXVyMDNtdHRmNXoxZw==" target="_blank"
               class="text-decoration-none">circle_of_life_jiujitsu</a>
           </p>
           <p class="mb-3 d-flex align-items-center">
-            <i class="bi bi-whatsapp text-success me-2"></i>
+            <span class="icon-chip" aria-hidden="true">
+              <img src="/assets/icons/whatsapp.svg" alt="">
+            </span>
             <a href="https://wa.me/4917661990534" target="_blank" class="text-decoration-none">WhatsApp schreiben</a>
           </p>
 
@@ -374,8 +380,10 @@
             </iframe>
           </div>
 
-          <p class="small text-secondary mt-2 mb-0">
-            <i class="bi bi-car-front-fill text-warning me-1"></i>
+          <p class="small text-secondary mt-2 mb-0 d-flex align-items-center gap-2">
+            <span class="icon-chip" aria-hidden="true">
+              <img src="/assets/icons/parken.svg" alt="">
+            </span>
             Parken: ihr könnt gegenüber vom Eingang auf der Insel parken.
           </p>
         </div>
