Mobil hero verbessert

--- a/index.html
+++ b/index.html
@@ -258,9 +258,8 @@
         </span>
       </h1>
       <p class="hero-subline">
-        Deine Adresse für 🥋 Brazilian Jiu-Jitsu, Grappling & Kampfsport in Ludwigshafen, Mannheim & der gesamten
-        Rhein-Neckar-Region – anfängerfreundlich, strukturiert & unverbindlich mit festem Kursplan für Gi, No-Gi und
-        Kindertraining.
+        BJJ & Grappling zwischen Ludwigshafen, Mannheim und der Rhein-Neckar-Region – klare Kursstruktur, kostenloses
+        Probetraining und eine familiäre Academy für Gi, No-Gi und Kinder.
         <a href="#kursplan" class="inline-cta">
           <br>Hier kannst du unseren <span class="txt">Kursplan ansehen</span> <span class="icon">📅</span></a>
       </p>
@@ -268,21 +267,6 @@
       <!-- Primärer CTA (dezent) – linksbündig; auf Mobile automatisch darunter -->
       <div class="hero-ctas">
         <a class="btn btn-brand btn-lg btn-quiet hero-btn" href="#probetraining">Kostenloses Probetraining sichern</a>
-      </div>
-      <div class="hero-cta-secondary" aria-label="Weitere Kontaktmöglichkeiten">
-        <span class="hero-cta-note">Oder direkt melden:</span>
-        <a class="hero-cta-link" href="tel:+4917661990534">
-          <span class="icon-chip icon-chip--inline" aria-hidden="true">
-            <img src="/assets/icons/telefon.svg" alt="">
-          </span>
-          0176&nbsp;61990534
-        </a>
-        <a class="hero-cta-link" href="https://wa.me/4917661990534" target="_blank" rel="noopener">
-          <span class="icon-chip icon-chip--inline" aria-hidden="true">
-            <img src="/assets/icons/whatsapp.svg" alt="">
-          </span>
-          WhatsApp schreiben
-        </a>
       </div>
       <!-- Hero-Bildblock -->
       <div class="hero-image-block">
@@ -307,6 +291,21 @@
           <a class="btn btn-outline-light"
             href="https://www.google.com/maps?q=Am+Herrschaftsweiher+17,+67071+Ludwigshafen+am+Rhein" target="_blank"
             rel="noopener">Route zum Gym</a>
+        </div>
+        <div class="hero-cta-secondary hero-cta-secondary--strip" aria-label="Schnelle Kontaktmöglichkeiten">
+          <span class="hero-cta-note">Direkter Kontakt:</span>
+          <a class="hero-cta-link" href="tel:+4917661990534">
+            <span class="icon-chip icon-chip--inline" aria-hidden="true">
+              <img src="/assets/icons/telefon.svg" alt="">
+            </span>
+            0176&nbsp;61990534
+          </a>
+          <a class="hero-cta-link" href="https://wa.me/4917661990534" target="_blank" rel="noopener">
+            <span class="icon-chip icon-chip--inline" aria-hidden="true">
+              <img src="/assets/icons/whatsapp.svg" alt="">
+            </span>
+            WhatsApp schreiben
+          </a>
         </div>
       </div>
     </div>
@@ -669,7 +668,7 @@
         </p>
       </header>
       <div class="row row-cols-1 row-cols-lg-2 g-4 align-items-stretch">
-        <div class="col" data-aos="fade-up">
+        <div class="col" data-aos="fade-up" id="kontakt">
           <article class="feature-card h-100 bg-white border rounded-4">
             <h3>Ideale Lage</h3>
             <p class="text-secondary mb-3">
