--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
   <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
   <link rel="preconnect" href="https://unpkg.com" crossorigin>
+<link rel="preload" href="/assets/images/JJPro_League.webp" as="image" type="image/webp" fetchpriority="high">
 
   <!-- Bootstrap -->
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" as="style"
@@ -271,7 +272,7 @@
       <!-- Hero-Bildblock -->
       <div class="hero-image-block">
         <div class="hero-image-frame">
-          <img id="hero-visual-img" src="/assets/images/JJPro_League.jpeg" alt="BJJ Visual" class="hero-image">
+          <img id="hero-visual-img" src="/assets/images/JJPro_League.webp" alt="BJJ Visual" class="hero-image">
         </div>
       </div>
 
@@ -328,7 +329,7 @@
         <!-- Gi -->
         <article class="course-card" data-aos="zoom-in">
           <div class="course-header">
-            <img src="/assets/icons/BJJ_BlackBelt.svg" alt="Gi black belt icon" class="course-icon">
+            <img src="/assets/icons/BJJ_BlackBelt.webp" alt="Gi black belt icon" class="course-icon">
             <h3><a class="stretched-link text-decoration-none text-reset" href="/bjj.html">Gi – klassisches BJJ</a></h3>
           </div>
           <p>
@@ -342,7 +343,7 @@
         <!-- No-Gi -->
         <article class="course-card" data-aos="zoom-in" data-aos-delay="150">
           <div class="course-header">
-            <img src="/assets/icons/nogi_icon.png" alt="No-Gi Icon" class="course-icon">
+            <img src="/assets/icons/nogi_icon.webp" alt="No-Gi Icon" class="course-icon">
             <h3><a class="stretched-link text-decoration-none text-reset" href="/grappling.html">No-Gi – modernes Grappling</a></h3>
           </div>
           <p>
@@ -357,7 +358,7 @@
         <!-- Kondition / Kids -->
         <article class="course-card" data-aos="zoom-in" data-aos-delay="300">
           <div class="course-header">
-            <img src="/assets/icons/strength_icon.png" alt="Fitness und Kraft Icon" class="course-icon">
+            <img src="/assets/icons/strength_icon.webp" alt="Fitness und Kraft Icon" class="course-icon">
             <h3><a class="stretched-link text-decoration-none text-reset" href="/fitness.html">Kondition & Muskelaufbau</a></h3>
           </div>
           <p>
@@ -1106,8 +1107,7 @@
 
   <!-- JS libs -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js" defer
-    referrerpolicy="no-referrer"></script>
+
 
   <!-- AOS (Scroll Animations) -->
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js" defer></script>
