--- a/grappling.html
+++ b/grappling.html
@@ -270,7 +270,7 @@
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script>AOS.init({ once:true, duration:600, easing:'ease-out' });</script>
   <script src="/js/main.js"></script>
-  <script type="module" src="/assets/js/nav.js"></script>
+  <script src="/js/nav.js" defer></script>
   <script>document.getElementById('jahr').textContent=new Date().getFullYear();</script>
 </body>
 </html>
