--- a/index.html
+++ b/index.html
@@ -1135,8 +1135,7 @@
 
   <!-- Main JS -->
   <script src="/js/main.js" defer></script>
-  <!-- Popper + Bootstrap via ESM in deiner Datei -->
-  <script type="module" src="/js/nav.js"></script>
+  <script src="/js/nav.js" defer></script>
 
 </body>
 
