--- a/kursangebot.html
+++ b/kursangebot.html
@@ -639,7 +639,7 @@
 
     <!-- Main JS -->
     <script src="/js/main.js"></script>
-    <script type="module" src="/assets/js/nav.js"></script>
+    <script src="/js/nav.js" defer></script>
 </body>
 
 </html>
