--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@
   <link rel="preconnect" href="https://unpkg.com" crossorigin>
 <link rel="preload" href="/assets/images/JJPro_League.webp" as="image" type="image/webp" fetchpriority="high">
 
+<!-- <style>
+  .hero-modern{position:relative;color:#fff;padding:clamp(28px,6vh,48px) 0 clamp(32px,7vh,56px);background:#14182b url("/assets/background/hero-wave.svg") center top/cover no-repeat;overflow:hidden;}
+  .hero-content{display:flex;flex-direction:column;align-items:center;gap:clamp(18px,4vw,28px);width:min(100%,1080px);margin:0 auto;padding:0 clamp(18px,5vw,48px);}
+  .hero-title-row{display:flex;align-items:center;justify-content:center;gap:clamp(14px,2.5vw,26px);font-size:clamp(2.4rem,6vw,3.8rem);font-weight:800;flex-wrap:wrap;margin-bottom:1.4em;line-height:1.24;}
+  .hero-circle{border-bottom:0.18em solid #bfa24a;padding-bottom:.08em;}
+  .hero-subline{color:#f5efe3;margin:0 auto clamp(1.4em,3vw,2.2em);text-align:center;line-height:1.7;font-size:clamp(1.1rem,2vw,1.5rem);max-width:60ch;}
+  .hero-image-block{width:100%;padding:0 clamp(16px,5vw,48px);box-sizing:border-box;}
+  .hero-image-frame{width:100%;max-width:clamp(320px,90vw,680px);margin:0 auto;border-radius:24px;overflow:hidden;box-shadow:0 18px 54px rgba(191,162,74,.13);}
+  .hero-image-frame img{display:block;width:100%;height:auto;object-fit:cover;border-radius:inherit;}
+  @media(max-width:720.98px){.hero-content{gap:16px;padding:0 clamp(12px,4vw,28px);} .hero-title-row{font-size:clamp(2rem,8vw,2.4rem);} .hero-subline{font-size:1.05rem;max-width:95vw;}}
+</style> -->
+
   <!-- Bootstrap -->
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" as="style"
     onload="this.onload=null;this.rel='stylesheet'">
@@ -272,7 +284,7 @@
       <!-- Hero-Bildblock -->
       <div class="hero-image-block">
         <div class="hero-image-frame">
-          <img id="hero-visual-img" src="/assets/images/JJPro_League.webp" alt="BJJ Visual" class="hero-image">
+          <img id="hero-visual-img" src="/assets/images/JJPro_League.webp" alt="BJJ Visual" class="hero-image" loading="eager" decoding="async" fetchpriority="high">
         </div>
       </div>
 
@@ -329,7 +341,7 @@
         <!-- Gi -->
         <article class="course-card" data-aos="zoom-in">
           <div class="course-header">
-            <img src="/assets/icons/BJJ_BlackBelt.webp" alt="Gi black belt icon" class="course-icon">
+            <img src="/assets/icons/BJJ_BlackBelt.webp" alt="Gi black belt icon" class="course-icon" width="26" height="26">
             <h3><a class="stretched-link text-decoration-none text-reset" href="/bjj.html">Gi – klassisches BJJ</a></h3>
           </div>
           <p>
@@ -343,7 +355,7 @@
         <!-- No-Gi -->
         <article class="course-card" data-aos="zoom-in" data-aos-delay="150">
           <div class="course-header">
-            <img src="/assets/icons/nogi_icon.webp" alt="No-Gi Icon" class="course-icon">
+            <img src="/assets/icons/nogi_icon.webp" alt="No-Gi Icon" class="course-icon" width="26" height="26">
             <h3><a class="stretched-link text-decoration-none text-reset" href="/grappling.html">No-Gi – modernes Grappling</a></h3>
           </div>
           <p>
