--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <link rel="preconnect" href="https://unpkg.com" crossorigin>
 <link rel="preload" href="/assets/images/JJPro_League.webp" as="image" type="image/webp" fetchpriority="high">
 
-<!-- <style>
+<style>
   .hero-modern{position:relative;color:#fff;padding:clamp(28px,6vh,48px) 0 clamp(32px,7vh,56px);background:#14182b url("/assets/background/hero-wave.svg") center top/cover no-repeat;overflow:hidden;}
   .hero-content{display:flex;flex-direction:column;align-items:center;gap:clamp(18px,4vw,28px);width:min(100%,1080px);margin:0 auto;padding:0 clamp(18px,5vw,48px);}
   .hero-title-row{display:flex;align-items:center;justify-content:center;gap:clamp(14px,2.5vw,26px);font-size:clamp(2.4rem,6vw,3.8rem);font-weight:800;flex-wrap:wrap;margin-bottom:1.4em;line-height:1.24;}
@@ -54,7 +54,7 @@
   .hero-image-frame{width:100%;max-width:clamp(320px,90vw,680px);margin:0 auto;border-radius:24px;overflow:hidden;box-shadow:0 18px 54px rgba(191,162,74,.13);}
   .hero-image-frame img{display:block;width:100%;height:auto;object-fit:cover;border-radius:inherit;}
   @media(max-width:720.98px){.hero-content{gap:16px;padding:0 clamp(12px,4vw,28px);} .hero-title-row{font-size:clamp(2rem,8vw,2.4rem);} .hero-subline{font-size:1.05rem;max-width:95vw;}}
-</style> -->
+</style>
 
   <!-- Bootstrap -->
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" as="style"
