Über uns seite fertig

--- a/bjj.html
+++ b/bjj.html
@@ -88,7 +88,7 @@
   <nav class="navbar navbar-expand-lg sticky-top transparent" aria-label="Hauptnavigation">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center gap-2" href="/">
-        <img src="/assets/images/JiuJitsuLogo.svg" alt="Circle of Life Jiu-Jitsu" width="28" height="28">
+        <img src="/assets/images/JiuJitsuLogo.svg" alt="Circle of Life Jiu-Jitsu" title="Circle of Life Jiu-Jitsu" width="28" height="28">
         <strong>Circle of Life Jiu-Jitsu</strong>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Menü öffnen">
@@ -172,7 +172,7 @@
             <picture>
               <img src="/assets/images/kurse/gi_training_1.jpeg" class="img-fluid rounded-4 shadow-sm"
                    width="900" height="600" loading="lazy" decoding="async"
-                   alt="BJJ im Gi – Technikdrills">
+                   alt="BJJ im Gi – Technikdrills" title="BJJ im Gi – Technikdrills">
             </picture>
             <p class="small text-secondary mt-2">Technikdrills & kontrolliertes Sparring im Gi.</p>
           </div>
@@ -229,7 +229,7 @@
                   <source srcset="/assets/images/begriffe/guard.avif" type="image/avif">
                   <source srcset="/assets/images/begriffe/guard.webp" type="image/webp">
                   <img src="/assets/images/begriffe/guard.jpg" class="img-fluid"
-                       width="900" height="600" loading="lazy" decoding="async" alt="BJJ Guard – Beispielbild">
+                       width="900" height="600" loading="lazy" decoding="async" alt="BJJ Guard – Beispielbild" title="BJJ Guard – Beispielbild">
                 </picture>
               </div>
             </article>
@@ -251,7 +251,7 @@
                   <source srcset="/assets/images/begriffe/guardpass.avif" type="image/avif">
                   <source srcset="/assets/images/begriffe/guardpass.webp" type="image/webp">
                   <img src="/assets/images/begriffe/guardpass.jpg" class="img-fluid"
-                       width="900" height="600" loading="lazy" decoding="async" alt="BJJ Guard-Pass – Beispielbild">
+                       width="900" height="600" loading="lazy" decoding="async" alt="BJJ Guard-Pass – Beispielbild" title="BJJ Guard-Pass – Beispielbild">
                 </picture>
               </div>
             </article>
@@ -273,7 +273,7 @@
                   <source srcset="/assets/images/begriffe/mount.avif" type="image/avif">
                   <source srcset="/assets/images/begriffe/mount.webp" type="image/webp">
                   <img src="/assets/images/begriffe/mount.jpg" class="img-fluid"
-                       width="900" height="600" loading="lazy" decoding="async" alt="BJJ Mount – Beispielbild">
+                       width="900" height="600" loading="lazy" decoding="async" alt="BJJ Mount – Beispielbild" title="BJJ Mount – Beispielbild">
                 </picture>
               </div>
             </article>
@@ -295,7 +295,7 @@
                   <source srcset="/assets/images/begriffe/sidecontrol.avif" type="image/avif">
                   <source srcset="/assets/images/begriffe/sidecontrol.webp" type="image/webp">
                   <img src="/assets/images/begriffe/sidecontrol.jpg" class="img-fluid"
-                       width="900" height="600" loading="lazy" decoding="async" alt="BJJ Side Control – Beispielbild">
+                       width="900" height="600" loading="lazy" decoding="async" alt="BJJ Side Control – Beispielbild" title="BJJ Side Control – Beispielbild">
                 </picture>
               </div>
             </article>
@@ -317,7 +317,7 @@
                   <source srcset="/assets/images/begriffe/back.avif" type="image/avif">
                   <source srcset="/assets/images/begriffe/back.webp" type="image/webp">
                   <img src="/assets/images/begriffe/back.jpg" class="img-fluid"
-                       width="900" height="600" loading="lazy" decoding="async" alt="BJJ Back Control – Beispielbild">
+                       width="900" height="600" loading="lazy" decoding="async" alt="BJJ Back Control – Beispielbild" title="BJJ Back Control – Beispielbild">
                 </picture>
               </div>
             </article>
@@ -339,7 +339,7 @@
                   <source srcset="/assets/images/begriffe/sweep.avif" type="image/avif">
                   <source srcset="/assets/images/begriffe/sweep.webp" type="image/webp">
                   <img src="/assets/images/begriffe/sweep.jpg" class="img-fluid"
-                       width="900" height="600" loading="lazy" decoding="async" alt="BJJ Sweep – Beispielbild">
+                       width="900" height="600" loading="lazy" decoding="async" alt="BJJ Sweep – Beispielbild" title="BJJ Sweep – Beispielbild">
                 </picture>
               </div>
             </article>
@@ -361,7 +361,7 @@
                   <source srcset="/assets/images/begriffe/submission.avif" type="image/avif">
                   <source srcset="/assets/images/begriffe/submission.webp" type="image/webp">
                   <img src="/assets/images/begriffe/submission.jpg" class="img-fluid"
-                       width="900" height="600" loading="lazy" decoding="async" alt="BJJ Submission – Beispielbild">
+                       width="900" height="600" loading="lazy" decoding="async" alt="BJJ Submission – Beispielbild" title="BJJ Submission – Beispielbild">
                 </picture>
               </div>
             </article>
