--- a/fitness.html
+++ b/fitness.html
@@ -84,7 +84,7 @@
   <nav class="navbar navbar-expand-lg sticky-top transparent" aria-label="Hauptnavigation">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center gap-2" href="/">
-        <img src="/assets/images/JiuJitsuLogo.svg" alt="Circle of Life Jiu-Jitsu" width="28" height="28">
+        <img src="/assets/images/JiuJitsuLogo.svg" alt="Circle of Life Jiu-Jitsu" title="Circle of Life Jiu-Jitsu" width="28" height="28">
         <strong>Circle of Life Jiu-Jitsu</strong>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Menü öffnen">
@@ -160,7 +160,7 @@
         </div>
         <div class="col-lg-6 text-center">
           <picture>
-            <img src="/assets/images/kurse/nogi_grappling_2.jpeg" class="img-fluid rounded-4 shadow-sm" width="900" height="600" loading="lazy" alt="Conditioning Training">
+            <img src="/assets/images/kurse/nogi_grappling_2.jpeg" class="img-fluid rounded-4 shadow-sm" width="900" height="600" loading="lazy" alt="Conditioning Training" title="Conditioning Training">
           </picture>
           <p class="small text-secondary mt-2">Funktionelle Kraft & Ausdauer – technisch sauber.</p>
         </div>
