--- a/grappling.html
+++ b/grappling.html
@@ -85,7 +85,7 @@
   <nav class="navbar navbar-expand-lg sticky-top transparent" aria-label="Hauptnavigation">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center gap-2" href="/">
-        <img src="/assets/images/JiuJitsuLogo.svg" alt="Circle of Life Jiu-Jitsu" width="28" height="28">
+        <img src="/assets/images/JiuJitsuLogo.svg" alt="Circle of Life Jiu-Jitsu" title="Circle of Life Jiu-Jitsu" width="28" height="28">
         <strong>Circle of Life Jiu-Jitsu</strong>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Menü öffnen">
@@ -147,7 +147,7 @@
           </div>
           <div class="col-lg-6 text-center">
             <picture>
-              <img src="/assets/images/kurse/nogi_grappling_1.jpeg" class="img-fluid rounded-4 shadow-sm" width="900" height="600" loading="lazy" alt="No-Gi Grappling Training">
+              <img src="/assets/images/kurse/nogi_grappling_1.jpeg" class="img-fluid rounded-4 shadow-sm" width="900" height="600" loading="lazy" alt="No-Gi Grappling Training" title="No-Gi Grappling Training">
             </picture>
             <p class="small text-secondary mt-2">Position, Druck & Bewegung statt Gi-Griffe.</p>
           </div>
@@ -175,7 +175,7 @@
             </button>
             <p class="term-desc small">Kontrolle über die Hände/Handgelenke, um Takedowns/Entries vorzubereiten.</p>
             <div id="img-handfight" class="collapse term-media" data-bs-parent="#begriffe-cards">
-              <img src="/assets/images/begriffe/handfighting.jpg" class="img-fluid" width="900" height="600" loading="lazy" alt="Hand Fighting Beispiel">
+              <img src="/assets/images/begriffe/handfighting.jpg" class="img-fluid" width="900" height="600" loading="lazy" alt="Hand Fighting Beispiel" title="Hand Fighting Beispiel">
             </div>
           </article></div>
           <!-- Takedown -->
@@ -185,7 +185,7 @@
             </button>
             <p class="term-desc small">Zu Boden bringen (Double/Single-Leg, Trips, Body Lock).</p>
             <div id="img-takedown" class="collapse term-media" data-bs-parent="#begriffe-cards">
-              <img src="/assets/images/begriffe/takedown.jpg" class="img-fluid" width="900" height="600" loading="lazy" alt="Takedown Beispiel">
+              <img src="/assets/images/begriffe/takedown.jpg" class="img-fluid" width="900" height="600" loading="lazy" alt="Takedown Beispiel" title="Takedown Beispiel">
             </div>
           </article></div>
           <!-- Passing -->
@@ -195,7 +195,7 @@
             </button>
             <p class="term-desc small">Die Guard ohne Griffe passieren (z. B. Knee-Cut, Over-Under).</p>
             <div id="img-pass" class="collapse term-media" data-bs-parent="#begriffe-cards">
-              <img src="/assets/images/begriffe/passing.jpg" class="img-fluid" width="900" height="600" loading="lazy" alt="Passing Beispiel">
+              <img src="/assets/images/begriffe/passing.jpg" class="img-fluid" width="900" height="600" loading="lazy" alt="Passing Beispiel" title="Passing Beispiel">
             </div>
           </article></div>
           <!-- Back Control -->
@@ -205,7 +205,7 @@
             </button>
             <p class="term-desc small">Stärkste Kontrolle (Seatbelt/Hooks), viele Submission-Optionen.</p>
             <div id="img-back" class="collapse term-media" data-bs-parent="#begriffe-cards">
-              <img src="/assets/images/begriffe/back.jpg" class="img-fluid" width="900" height="600" loading="lazy" alt="Back Control Beispiel">
+              <img src="/assets/images/begriffe/back.jpg" class="img-fluid" width="900" height="600" loading="lazy" alt="Back Control Beispiel" title="Back Control Beispiel">
             </div>
           </article></div>
           <!-- Leglocks (sicher) -->
@@ -215,7 +215,7 @@
             </button>
             <p class="term-desc small">Kontrollierte Einstiege/Abbrüche, Priorität: Sicherheit & Technik.</p>
             <div id="img-leglock" class="collapse term-media" data-bs-parent="#begriffe-cards">
-              <img src="/assets/images/begriffe/leglock.jpg" class="img-fluid" width="900" height="600" loading="lazy" alt="Leglock Beispiel">
+              <img src="/assets/images/begriffe/leglock.jpg" class="img-fluid" width="900" height="600" loading="lazy" alt="Leglock Beispiel" title="Leglock Beispiel">
             </div>
           </article></div>
           <!-- Submission -->
@@ -225,7 +225,7 @@
             </button>
             <p class="term-desc small">Hebel/Würgen (z. B. Rear-Naked Choke, Guillotine, Armbar).</p>
             <div id="img-sub" class="collapse term-media" data-bs-parent="#begriffe-cards">
-              <img src="/assets/images/begriffe/submission.jpg" class="img-fluid" width="900" height="600" loading="lazy" alt="Submission Beispiel">
+              <img src="/assets/images/begriffe/submission.jpg" class="img-fluid" width="900" height="600" loading="lazy" alt="Submission Beispiel" title="Submission Beispiel">
             </div>
           </article></div>
         </div>
