--- a/kinder.html
+++ b/kinder.html
@@ -85,7 +85,7 @@
   <nav class="navbar navbar-expand-lg sticky-top transparent" aria-label="Hauptnavigation">
     <div class="container">
       <a class="navbar-brand d-flex align-items-center gap-2" href="/">
-        <img src="/assets/images/JiuJitsuLogo.svg" alt="Circle of Life Jiu-Jitsu" width="28" height="28">
+        <img src="/assets/images/JiuJitsuLogo.svg" alt="Circle of Life Jiu-Jitsu" title="Circle of Life Jiu-Jitsu" width="28" height="28">
         <strong>Circle of Life Jiu-Jitsu</strong>
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expanded="false" aria-label="Menü öffnen">
@@ -144,7 +144,7 @@
           <picture>
             <source srcset="/assets/images/kurse/kids_1.avif" type="image/avif">
             <source srcset="/assets/images/kurse/kids_1.webp" type="image/webp">
-            <img src="/assets/images/kurse/kids_1.jpg" class="img-fluid rounded-4 shadow-sm" width="900" height="600" loading="lazy" alt="Kinder-BJJ Training">
+            <img src="/assets/images/kurse/kids_1.jpg" class="img-fluid rounded-4 shadow-sm" width="900" height="600" loading="lazy" alt="Kinder-BJJ Training" title="Kinder-BJJ Training">
           </picture>
           <p class="small text-secondary mt-2">Spielerisches Lernen in sicherem Rahmen.</p>
         </div>
@@ -171,7 +171,7 @@
           </button>
           <p class="term-desc small">Richtig hinfallen – ohne sich zu verletzen.</p>
           <div id="img-fall" class="collapse term-media" data-bs-parent="#begriffe-cards">
-            <img src="/assets/images/begriffe/fallschule.jpg" class="img-fluid" width="900" height="600" loading="lazy" alt="Fallschule Beispiel">
+            <img src="/assets/images/begriffe/fallschule.jpg" class="img-fluid" width="900" height="600" loading="lazy" alt="Fallschule Beispiel" title="Fallschule Beispiel">
           </div>
         </article></div>
         <!-- Position halten -->
@@ -181,7 +181,7 @@
           </button>
           <p class="term-desc small">Stabil bleiben, ruhig atmen, sicher kontrollieren.</p>
           <div id="img-halten" class="collapse term-media" data-bs-parent="#begriffe-cards">
-            <img src="/assets/images/begriffe/position.jpg" class="img-fluid" width="900" height="600" loading="lazy" alt="Position halten Beispiel">
+            <img src="/assets/images/begriffe/position.jpg" class="img-fluid" width="900" height="600" loading="lazy" alt="Position halten Beispiel" title="Position halten Beispiel">
           </div>
         </article></div>
         <!-- Tap (Abklopfen) -->
@@ -191,7 +191,7 @@
           </button>
           <p class="term-desc small">Zeichen „Stopp, ich gebe auf“ – Sicherheit geht vor.</p>
           <div id="img-tap" class="collapse term-media" data-bs-parent="#begriffe-cards">
-            <img src="/assets/images/begriffe/tap.jpg" class="img-fluid" width="900" height="600" loading="lazy" alt="Tap Beispiel">
+            <img src="/assets/images/begriffe/tap.jpg" class="img-fluid" width="900" height="600" loading="lazy" alt="Tap Beispiel" title="Tap Beispiel">
           </div>
         </article></div>
         <!-- Guard (einfach erklärt) -->
@@ -201,7 +201,7 @@
           </button>
           <p class="term-desc small">Mit den Beinen Abstand & Kontrolle halten.</p>
           <div id="img-guard" class="collapse term-media" data-bs-parent="#begriffe-cards">
-            <img src="/assets/images/begriffe/guard_kids.jpg" class="img-fluid" width="900" height="600" loading="lazy" alt="Guard Beispiel">
+            <img src="/assets/images/begriffe/guard_kids.jpg" class="img-fluid" width="900" height="600" loading="lazy" alt="Guard Beispiel" title="Guard Beispiel">
           </div>
         </article></div>
       </div>
