--- a/impressum.html
+++ b/impressum.html
@@ -11,7 +11,7 @@
 <body>
   <header class="container py-3">
     <a class="d-flex align-items-center" href="index.html" title="Zurück zur Startseite">
-      <img src="assets/images/JiuJitsuLogo.svg" alt="Circle of Life Logo" style="max-height: 60px;"> &nbsp; Zurück zur Startseite
+      <img src="assets/images/JiuJitsuLogo.svg" alt="Circle of Life Logo" title="Circle of Life Logo" style="max-height: 60px;"> &nbsp; Zurück zur Startseite
     </a>
   </header>
 
